--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -3,6 +3,7 @@
 
 .c-button {
   display: inline-flex;
+  align-items: center;
   color: #fff;
   background-color: colors.$primary;
   font-family: fonts.$text-font-family;
@@ -18,6 +19,21 @@
   transition: 0.3s ease;
   text-decoration: none;
 
+  .icon {
+    width: 16px;
+    height: 16px;
+    margin-left: 16px;
+    transition: 0.3s ease;
+    fill: #fff;
+  }
+  &:hover {
+    color: #fff;
+    background-color: lighten(colors.$primary, 15%);
+
+    .icon {
+      margin-left: 24px;
+    }
+  }
   &--secondary {
     color: #000;
     background-color: colors.$secondary;
@@ -26,5 +42,10 @@
     text-transform: none;
     border-color: colors.$secondary;
     border-radius: 4px;
+
+    &:hover {
+      color: #000;
+      background-color: darken(colors.$secondary, 15%);
+    }
   }
 }
