--- a/src/components/molecules/Tile/tile.scss
+++ b/src/components/molecules/Tile/tile.scss
@@ -10,6 +10,10 @@
     color: colors.$primary;
   }
   &__footer {
-    margin-top: 20px;
+    margin-top: 8px;
+
+    .c-link {
+      padding: 8px 0;
+    }
   }
 }
