--- a/src/components/organisms/Esercizio2/esercizio2.scss
+++ b/src/components/organisms/Esercizio2/esercizio2.scss
@@ -1,12 +1,29 @@
+@use "../../utilities/colors";
+
 .c-tiles {
   margin: 60px 0;
+}
+.c-tiles__header {
+  margin-bottom: 40px;
+}
+.c-tiles__title {
+  position: relative;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 64px;
+    height: 4px;
+    background-color: colors.$primary;
+  }
 }
 .c-tiles__content {
   display: grid;
   gap: 24px;
-}
-.c-tiles__header {
-  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
