--- a/src/components/organisms/Tiles/tiles.scss
+++ b/src/components/organisms/Tiles/tiles.scss
@@ -1,7 +1,9 @@
 @use "../../utilities/colors";
 
 .c-tiles {
-  margin: 60px 0;
+  background-color: #f9f9f9;
+  padding: 40px 0;
+  margin-bottom: 40px;
 }
 .c-tiles__header {
   margin-bottom: 40px;
@@ -27,6 +29,10 @@
 }
 
 @media screen and (min-width: 768px) {
+  .c-tiles {
+    padding: 80px 0;
+    margin-bottom: 80px;
+  }
   .c-tiles__content {
     gap: 40px 32px;
     grid-template-columns: 1fr 1fr 1fr;
